--- a/README.rdoc
+++ b/README.rdoc
@@ -5,7 +5,8 @@ application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version 2.1.1
+
 
 * System dependencies
 
@@ -26,3 +27,4 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
